--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
 }
 
 .logo{
-    background-image:url("./images/amazon_logo.png");
+    background-image:url("amazon_logo.png");
     background-size: cover;
     height:50px;
     width:100%;
@@ -157,7 +157,7 @@ span{
 /*hero section starts */
 
 .hero-section{
-    background-image: url("./images/hero_image.jpg");
+    background-image: url("hero_image.jpg");
     height: 380px;
     background-size:cover;
     display: flex;
@@ -272,7 +272,7 @@ ul{
 }
 
 .logo{
-    background-image:url("./images/amazon_logo.png");
+    background-image:url("amazon_logo.png");
     background-size: cover;
     height:50px;
     width:100px;
